<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BestTest</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="dummy_content"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="menu_settings">Settings</string>
    <string name="bt_exit">Kilépés</string>
    <string name="bt_back">Vissza</string>
    <string name="bt_1">Névhez képet</string>
    <string name="bt_2">Képhez nevet</string>
    <string name="bt_3">Jöhet bármi</string>
    <string name="bt_4">Lista</string>
    <string name="bt_5">Beállítások</string>
    <string name="title_activity_beallitas">Beállítás</string>
    <string name="b_bt_1">Adatbázis</string>
    <string name="b_bt_2">Kategóriák</string>
    <string name="b_bt_3">Kérdések</string>
    <string name="b_bt_4">Lista</string>
    <string name="b_bt_5">Személyek</string>
    <string name="title_activity_kategoriak">Kategóriák</string>
    <string name="m_del">Törlés</string>
    <string name="m_new">Új kategória</string>
    <string name="m_back">Vissza</string>
    <string name="title_activity_kategoria_add">Új kategória</string>
    <string name="title_activity_kategoria_mod">Kategória módosítása</string>
    <string name="action_settings">Settings</string>
    <string name="kategoria_nev">Név</string>
    <string name="kategoria_szulo">Szülő ID</string>
    <string name="btnUjkat">Rögzít</string>
    <string name="btnModkat">Rögzít</string>
    <string name="btnCancelkat">Mégsem</string>
    <string name="title_activity_kerdesek">Kérdések</string>
    <string name="title_activity_kerdesek_add">Új kérdés</string>
    <string name="title_activity_kerdesek_mod">Kérdés módosítása</string>
    <string name="kerdes">Kérdés</string>
    <string name="kerdes_kep">Kép</string>
    <string name="kerdes_leiras1">Leírás 1</string>
    <string name="kerdes_leiras2">Leírás 2</string>
    <string name="btnUjkerdes">Rögzít</string>
    <string name="btnModkerdes">Rögzít</string>
    <string name="btnCancelKerdes">Mégsem</string>
    <string name="btnUjkepFoto">Készítés</string>
    <string name="btnUjkepFile">Feltöltés</string>
    <string name="title_activity_camera">Új kép</string>
    <string name="btnCapture">Klikk</string>
    <string name="ivPhoto">Kép</string>
    <string name="kategoria">Kategória</string>
    <string name="DBError_1">Hibás adatbázis írás</string>
    <string name="title_activity_nev_kep">Névhez képet</string>
    <string name="title_activity_db_tools">Adatbázis eszközök</string>
    <string name="btnmentes">Mentés</string>
    <string name="btnvisszatoltes">Visszatöltés</string>
    <string name="nincstobb">Nincs több</string>
    <string name="kerdesdb">Kérdés: </string>
    <string name="valaszdb">Válasz: </string>
    <string name="jovalasz">Jó</string>
    <string name="rosszvalasz">Rossz</string>
    <string name="title_activity_kep_nev">Képhez nevet</string>
    <string name="hello_world">Hello world!</string>
    <string name="tesztvalasz">Teszt válasz</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="nemkepfile">Nem kép</string>
    <string name="keveskerdes">Legalább 5 kérdés kell !!</string>
    <string name="kerdespersorozat">Hány kérdés legyen egy sorozatban</string>
    <string name="kerdespersorozatT">Kérdés darabszám?</string>
    <string name="bt_db_alap">Próba adatok betöltése</string>
    <string name="dbbutton4">Összes kérdés törlése</string>
    <string name="title_activity_nev_nev">NevNevActivity</string>
    <string name="dbbuttonmegoszt">Megosztás</string>
    <string name="image_h">Kép magassága (dp)</string>
    <string name="image_w">Kép szélesség (dp)</string>
    <string name="autostepp">Automatikus léptetés ?</string>
    <string name="autostepptime">Várakozás (sec)</string>
    <string name="backupOK">Sikeres mentés !</string>
    <string name="backupEr">Sikertelen mentés !</string>
    <string name="restorQ">A jelenlegi kérdések törlődnek! \n Biztos?</string>
    <string name="restorOK">Sikeres visszatöltés !</string>
    <string name="restorEr">Sikertelen visszatöltés !</string>
    <string name="dbalapQ">A jelenlegi kérdések felülíródnak! \n Biztos?</string>
    <string name="dbalapOK">Sikeres betöltés !</string>
    <string name="dbalapEr">Sikertelen betöltés !</string>
    <string name="title_activity_add_user">Új Személy</string>
    <string name="title_activity_user_mod">Személy módosítása</string>
    <string name="add_user_name">Név</string>
    <string name="add_user_rname">Rövid név</string>
    <string name="title_activity_users">Tesztelők</string>
    <string name="title_activity_user_sel">Ki vagy?</string>
    <string name="user_sel_bt_ok">OK</string>
    <string name="kerdesQ">A jelenlegi kérdés törlődik! \n Biztos?</string>
    <string name="deleteQ">A jelenlegi kérdések és kategóriák törlődnek! \n Biztos?</string>
    <string name="deleteOK">Sikeres törlés !</string>
    <string name="title_activity_upload">UploadActivity</string>
	<string name="upload_leiras">Leírás:</string>
	<string name="upload_feltolti">Feltölti:</string>
</resources>