<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DbToolsLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DbToolsActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/DbToolsad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/db_button1"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onClick"
        android:text="@string/btnmentes" />

    <Button
        android:id="@+id/db_button2"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/btnvisszatoltes" />

    <Button
        android:id="@+id/db_button3"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/bt_db_alap" />

    <Button
        android:id="@+id/db_button4"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/dbbutton4" />

    <Button
        android:id="@+id/db_button_megoszt"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/dbbuttonmegoszt" />

    <Button
        android:id="@+id/db_buttonjobb"
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onClick"
        android:text="@string/bt_back" />

</LinearLayout>