<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:stretchColumns="1"
    tools:context=".KategoriaAddActivity" >

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/kategoria_nev" />

        <EditText
            android:id="@+id/katNev"
            android:inputType="text"
            android:width="200dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/kategoria_szulo" />

        <EditText
            android:id="@+id/katSzulo"
            android:inputType="number"
            android:width="20dp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnUjkat"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="center"
            android:text="@string/btnUjkat" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="center"
            android:text="@string/btnCancelkat" />
    </TableRow>

</TableLayout>