<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".BeallitasActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_bt_1" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_bt_2" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_bt_3" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_bt_4" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_bt_5" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/b_button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_exit" />

            </TableRow>

         </TableLayout>

    </FrameLayout>

</FrameLayout>