<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upload_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".UploadActivity" >

    <TextView
        android:id="@+id/upload_feltolti_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_feltolti"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/upload_user_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/upload_leirastextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_leiras"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/upload_leiras_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/upload_button1"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/dbbuttonmegoszt" />

        <Button
            android:id="@+id/upload_button2"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btnCancelKerdes" />
    </LinearLayout>

</LinearLayout>