<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:screenOrientation="portrait"
    android:stretchColumns="1"
    tools:context=".KerdesekAddActivity" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/kerdes"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/ujkerdes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:width="200dp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/kerdes_leiras1"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/ujkerdesleiras1"
                        android:inputType="text"
                        android:width="200dp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/kerdes_leiras2"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/ujkerdesleiras2"
                        android:inputType="text"
                        android:width="200dp" />
                </TableRow>

                <TableRow android:gravity="center" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="right"
                        android:text="@string/kategoria"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <hu.promarkvf.besttest.MultiSelectSpinner
                        android:id="@+id/spinnerkategoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow android:gravity="center" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/kerdes_kep" />

                    <ImageView
                        android:id="@+id/imageViewkerdes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>

                    <Button
                        android:id="@+id/btnUjkepFoto"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:text="@string/btnUjkepFoto" />

                    <Button
                        android:id="@+id/btnUjkepFile"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:text="@string/btnUjkepFile" />
                </TableRow>

                <TableRow android:layout_marginTop="50dp" >

                    <Button
                        android:id="@+id/btnUjkerdes"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:text="@string/btnUjkat" />

                    <Button
                        android:id="@+id/btnCancelkerdes"
                        style="@style/button"
                        android:layout_width="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:text="@string/btnCancelKerdes" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </TableRow>

</TableLayout>