<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context=".AddUserActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/add_user_name"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/add_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:width="200dp" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:text="@string/add_user_rname"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/add_user_rname"
                        android:inputType="text"
                        android:width="200dp" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TableRow
                    android:layout_marginTop="20dp"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btnadd_user_ok"
                        style="@style/button"
                        android:layout_width="100dp"
                        android:layout_column="1"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="@string/btnUjkat" />

                    <Button
                        android:id="@+id/btnadd_user_cancel"
                        style="@style/button"
                        android:layout_width="100dp"
                        android:layout_column="1"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="@string/btnCancelKerdes" />
                </TableRow>
            </TableLayout>
        </TableLayout>
    </ScrollView>

</RelativeLayout>